--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         }
       }
     </script>
+    <script>
+      // Prevents flash of incorrect theme
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark')
+      } else {
+        document.documentElement.classList.remove('dark')
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
